@@ -1,3 +1,14 @@
+2019-04-25  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/90239
+	* doc/xml/manual/status_cxx2020.xml: Amend P0591R4 status.
+	* include/std/scoped_allocator [__cplusplus > 201703L]
+	(scoped_allocator_adaptor::construct): Define in terms of
+	uses_allocator_construction_args, as per P0591R4.
+	* testsuite/20_util/scoped_allocator/construct_pair_c++2a.cc: New test.
+	* testsuite/util/testsuite_allocator.h: Remove name of unused
+	parameter.
+
 2019-04-24  Jonathan Wakely  <jwakely@redhat.com>
 
 	* doc/xml/manual/status_cxx2017.xml: Document P0024R2 status.
